added teacher component

--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <div *ngIf="!loading" class="cards-list">
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 1]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/YRzQnWzbn4WIxd3ZYx/giphy.gif" />
     </div>
@@ -31,7 +31,7 @@
     </div>
   </mat-card>
 
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 2]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/xTiQyw99MYXMazEZoc/giphy.gif" />
     </div>
@@ -43,7 +43,7 @@
     </div>
   </mat-card>
 
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 3]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/mwwEcxbodLHIk/giphy.gif" />
     </div>
@@ -55,7 +55,7 @@
     </div>
   </mat-card>
 
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 4]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/lXiRzPb8C5JTJcfPq/giphy.gif" />
     </div>
@@ -77,7 +77,7 @@
       Top Sellers
     </h2>
   </div>
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 5]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/xTiN0FXnoSlDhSjgR2/giphy.gif" />
     </div>
@@ -88,7 +88,7 @@
       <p>Franco Verdi</p>
     </div>
   </mat-card>
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 6]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/cgW5iwX0e37qg/giphy.gif" />
     </div>
@@ -99,7 +99,7 @@
       <p>Loren Gray</p>
     </div>
   </mat-card>
-  <mat-card class="card">
+  <mat-card [routerLink]="['/teacher', 7]" class="card">
     <div class="card_image">
       <img src="https://media.giphy.com/media/pO4UHglOY2vII/giphy.gif" />
     </div>
