--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -6,232 +6,292 @@
   transform: translate(-50%, -50%);
 }
 
-.cards-list {
-  z-index: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  padding: 1%;
+// .cards-list {
+//   z-index: 0;
+//   width: 100%;
+//   display: flex;
+//   justify-content: space-around;
+//   flex-wrap: wrap;
+//   padding: 1%;
+// }
+
+// .card {
+//   margin: 50px auto;
+//   width: 250px;
+//   height: 250px;
+//   border-radius: 40px;
+//   box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
+//     -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+//   cursor: pointer;
+//   transition: 0.4s;
+// }
+
+// .card .card_image {
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-position: center center;
+//   width: inherit;
+//   height: inherit;
+//   border-radius: 40px;
+// }
+
+// .card .card_image img {
+//   width: inherit;
+//   height: inherit;
+//   border-radius: 40px;
+//   object-fit: cover;
+// }
+
+// .card .card_title {
+//   text-align: center;
+//   border-radius: 0px 0px 40px 40px;
+//   font-size: 15px;
+//   font-weight: 900;
+//   line-height: 21px;
+//   color: #ffffff;
+//   margin-top: 30px;
+// }
+
+// .card .card_subtitle {
+//   text-align: center;
+//   border-radius: 0px 0px 40px 40px;
+//   font-size: 14px;
+//   font-weight: 400;
+//   line-height: 19px;
+//   color: rgba(255, 255, 255, 0.5);
+//   margin-top: 5px;
+// }
+
+// .card:hover {
+//   transform: scale(0.9, 0.9);
+//   box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
+//     -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+// }
+
+// @media all and (max-width: 500px) {
+//   .card-list {
+//     /* On small screens, we are no longer using row direction but column */
+//     flex-direction: column;
+//   }
+// }
+
+
+
+// .second-title {
+//   font-weight: 900; 
+//   line-height: 41px; 
+//   font-size: 30px; 
+//   color: "#ffffff";
+// }
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins;
 }
 
-.card {
-  margin: 50px auto;
-  width: 250px;
-  height: 250px;
-  border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
-  cursor: pointer;
-  transition: 0.4s;
-}
+// body {
+//   background: #1f061b;
+//   min-height: 100vh;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-.card .card_image {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: inherit;
-  height: inherit;
-  border-radius: 40px;
-}
-
-.card .card_image img {
-  width: inherit;
-  height: inherit;
-  border-radius: 40px;
-  object-fit: cover;
-}
-
-.card .card_title {
-  text-align: center;
-  border-radius: 0px 0px 40px 40px;
-  font-size: 15px;
-  font-weight: 900;
-  line-height: 21px;
-  color: #ffffff;
-  margin-top: 30px;
-}
-
-.card .card_subtitle {
-  text-align: center;
-  border-radius: 0px 0px 40px 40px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 19px;
-  color: rgba(255, 255, 255, 0.5);
-  margin-top: 5px;
-}
-
-.card:hover {
-  transform: scale(0.9, 0.9);
-  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
-}
-
-@media all and (max-width: 500px) {
-  .card-list {
-    /* On small screens, we are no longer using row direction but column */
-    flex-direction: column;
-  }
-}
-
-$input-bg-color: #69f0ae;
-$input-text-color: #121212;
-$animation-bounce: cubic-bezier(0.4, -1, 0.6, 2);
-
-@keyframes blink {
-  49% {
-    opacity: 0;
-  }
-  50% {
-    oppacity: 1;
-  }
-  51% {
-    oppacity: 1;
-  }
-  52% {
-    opacity: 0;
-  }
-}
-
-// Search Box
-.search-box {
-  position: relative;
-
-  &__input {
-    background-color: $input-bg-color;
-    caret-color: $input-bg-color;
-    color: $input-text-color;
-    border: 0;
-    border-radius: 0.4em;
-    padding: 0.25em 0.8em;
-    font-size: 1em;
-    box-shadow: 0 0 0.75em 0.25em rgba($input-bg-color, 0.2);
-    transition: box-shadow 0.5s ease;
-
-    // Adds shadow to input
-    &:hover,
-    &:focus {
-      outline: 0;
-      box-shadow: 0 0.5em 1.5em 0.25em rgba($input-bg-color, 0.2);
-    }
-
-    // Display Search Icon
-    + i {
-      position: absolute;
-      width: 0.125em;
-      height: 70%;
-      border-radius: 0.2em;
-      background-color: $input-text-color;
-
-      left: 0.8em;
-      top: 50%;
-      transform: rotateZ(-45deg) translateY(-50%);
-      transform-origin: top;
-      transition: transform 0.5s $animation-bounce;
-
-      &::before {
-        content: "";
-        display: block;
-        position: relative;
-        top: 0em;
-        left: -0.3em;
-        width: 0.5em;
-        height: 0.5em;
-        border-radius: 100%;
-        border: 0.125em solid $input-text-color;
-        background-color: $input-bg-color;
-
-        transition: transform 0.5s $animation-bounce;
-      }
-    }
-
-    // Display custom caret
-    &:focus {
-      + i {
-        transform: rotateZ(0) translateY(-50%);
-        animation: blink 1.1s infinite 0.5s;
-
-        &::before {
-          transform: rotateY(90deg);
-        }
-      }
-    }
-
-    // When value is not empty
-    &[value]:not([value=""]) {
-      caret-color: $input-text-color;
-
-      + i {
-        display: none;
-      }
-    }
-  }
-}
-
-p {
-  text-align: center;
-}
-
-.searchBox {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform:  translate(-50%,50%);
-  background: #2f3640;
-  height: 40px;
-  border-radius: 40px;
-  padding: 10px;
-
-}
-
-.searchBox:hover > .searchInput {
-  width: 240px;
-  padding: 0 6px;
-}
-
-.searchBox:hover > .searchButton {
-background: white;
-color : #2f3640;
-}
-
-.searchButton {
-  color: white;
-  float: right;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #2f3640;
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.card {
+  position: relative;
+  width: 320px;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px 30px;
   transition: 0.4s;
 }
 
-.searchInput {
-  border:none;
-  background: none;
-  outline:none;
-  float:left;
-  padding: 0;
+.card::before {
+  content: "";
+  position: absolute;
+  background: white;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 50px;
+  border-radius: 10px;
+  transform: skewx(15deg);
+  transition: 0.4s;
+}
+
+.card::after {
+  content: "";
+  position: absolute;
+  background: white;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 50px;
+  border-radius: 10px;
+  transform: skewx(15deg);
+  transition: 0.4s;
+  filter: blur(30px);
+}
+
+.card:hover::before,
+.card:hover::after {
+  transform: skewx(0);
+  left: 20px;
+  width: calc(100% - 80px);
+}
+
+.card:nth-child(1)::before,
+.card:nth-child(1)::after {
+  background: linear-gradient(315deg, #ffbc00, #ff0058);
+}
+
+.card:nth-child(2)::before,
+.card:nth-child(2)::after {
+  background: linear-gradient(315deg, #03a9f4, #ff0058);
+}
+
+.card:nth-child(3)::before,
+.card:nth-child(3)::after {
+  background: linear-gradient(315deg, #4dff03, #00d0ff);
+}
+
+.card span {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.card span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  opacity: 0;
+  transition: 0.4s;
+}
+
+.card:hover span::before {
+  width: 100px;
+  height: 100px;
+  opacity: 1;
+  left: 50px;
+  top: -50px;
+  animation: swing 2s ease-in-out infinite;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.card span::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  opacity: 0;
+  transition: 0.4s;
+}
+
+.card:hover span::after {
+  width: 100px;
+  height: 100px;
+  opacity: 1;
+  right: 50px;
+  bottom: -50px;
+  animation: swing 2s ease-in-out infinite;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  animation-delay: -1s;
+}
+
+.content {
+  z-index: 1;
+  position: relative;
+  left: 0;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  padding: 20px 50px;
+  transition: 0.4s;
   color: white;
-  font-size: 16px;
-  transition: 0.4s;
-  line-height: 40px;
-  width: 0px;
-
 }
 
-@media screen and (max-width: 620px) {
-.searchBox:hover > .searchInput {
-  width: 150px;
-  padding: 0 6px;
-}
+.card:hover .content {
+  left: -25px;
+  padding: 40px 50px;
 }
 
-.second-title {
-  font-weight: 900; 
-  line-height: 41px; 
-  font-size: 30px; 
-  color: "#ffffff";
+.card h2 {
+  font-size: 1.9em;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 0.95em;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+
+.card a {
+  display: inline-block;
+  text-decoration: none;
+  background: white;
+  color: #222;
+  font-size: 1.1em;
+  font-weight: 500;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+@keyframes swing {
+  0% {
+    transform: translatey(10px);
+  }
+
+  50% {
+    transform: translatey(-10px);
+  }
+
+  100% {
+    transform: translatey(10px);
+  }
+}
+
+.avatar {
+  width: 80px;
+  height: 100%;
+  position: relative;
+  margin: 0 auto;
+  img {
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -42px;
+    border: 4px solid white;
+  }
 }
