--- a/src/app/components/teacher/teacher.component.html
+++ b/src/app/components/teacher/teacher.component.html
@@ -1,1 +1,30 @@
 <p>teacher works! {{ teacherIdFromRoute }}</p>
+<div class="container">
+    <div class="card a">
+      <span></span>
+      <div class="content">
+        <h2>Card One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid harum molestiae inventore id quaerat earum error quidem voluptates velit!</p>
+        <a href="#">Read More</a>
+      </div>
+    </div>
+  
+    <!-- <div class="card b">
+      <span></span>
+      <div class="content">
+        <h2>Card One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid harum molestiae inventore id quaerat earum error quidem voluptates velit!</p>
+        <a href="#">Read More</a>
+      </div>
+    </div>
+  
+    <div class="card c">
+      <span></span>
+      <div class="content">
+        <h2>Card One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid harum molestiae inventore id quaerat earum error quidem voluptates velit!</p>
+        <a href="#">Read More</a>
+      </div>
+    </div> -->
+  
+  </div>
