--- a/src/app/components/teacher/teacher.component.scss
+++ b/src/app/components/teacher/teacher.component.scss
@@ -33,44 +33,44 @@ body {
   transition: 0.4s;
 }
 
-.card::before {
-  content: "";
-  position: absolute;
-  background: white;
-  width: 50%;
-  height: 100%;
-  top: 0;
-  left: 50px;
-  border-radius: 10px;
-  transform: skewx(15deg);
-  transition: 0.4s;
-}
+// .card::before {
+//   content: "";
+//   position: absolute;
+//   background: white;
+//   width: 50%;
+//   height: 100%;
+//   top: 0;
+//   left: 50px;
+//   border-radius: 10px;
+//   transform: skewx(15deg);
+//   transition: 0.4s;
+// }
 
-.card::after {
-  content: "";
-  position: absolute;
-  background: white;
-  width: 50%;
-  height: 100%;
-  top: 0;
-  left: 50px;
-  border-radius: 10px;
-  transform: skewx(15deg);
-  transition: 0.4s;
-  filter: blur(30px);
-}
+// .card::after {
+//   content: "";
+//   position: absolute;
+//   background: white;
+//   width: 50%;
+//   height: 100%;
+//   top: 0;
+//   left: 50px;
+//   border-radius: 10px;
+//   transform: skewx(15deg);
+//   transition: 0.4s;
+//   filter: blur(30px);
+// }
 
-.card:hover::before,
-.card:hover::after {
-  transform: skewx(0);
-  left: 20px;
-  width: calc(100% - 80px);
-}
+// .card:hover::before,
+// .card:hover::after {
+//   transform: skewx(0);
+//   left: 20px;
+//   width: calc(100% - 80px);
+// }
 
-.card:nth-child(1)::before,
-.card:nth-child(1)::after {
-  background: linear-gradient(315deg, #ffbc00, #ff0058);
-}
+// .card:nth-child(1)::before,
+// .card:nth-child(1)::after {
+//   background: linear-gradient(315deg, #ffbc00, #ff0058);
+// }
 
 .card:nth-child(2)::before,
 .card:nth-child(2)::after {
@@ -107,58 +107,58 @@ body {
   transition: 0.4s;
 }
 
-.card:hover span::before {
-  width: 100px;
-  height: 100px;
-  opacity: 1;
-  left: 50px;
-  top: -50px;
-  animation: swing 2s ease-in-out infinite;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-}
+// .card:hover span::before {
+//   width: 100px;
+//   height: 100px;
+//   opacity: 1;
+//   left: 50px;
+//   top: -50px;
+//   animation: swing 2s ease-in-out infinite;
+//   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+// }
 
-.card span::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  border-radius: 10px;
-  opacity: 0;
-  transition: 0.4s;
-}
+// .card span::after {
+//   content: "";
+//   position: absolute;
+//   bottom: 0;
+//   right: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: rgba(255, 255, 255, 0.1);
+//   backdrop-filter: blur(10px);
+//   border-radius: 10px;
+//   opacity: 0;
+//   transition: 0.4s;
+// }
 
-.card:hover span::after {
-  width: 100px;
-  height: 100px;
-  opacity: 1;
-  right: 50px;
-  bottom: -50px;
-  animation: swing 2s ease-in-out infinite;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-  animation-delay: -1s;
-}
+// .card:hover span::after {
+//   width: 100px;
+//   height: 100px;
+//   opacity: 1;
+//   right: 50px;
+//   bottom: -50px;
+//   animation: swing 2s ease-in-out infinite;
+//   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+//   animation-delay: -1s;
+// }
 
 .content {
   z-index: 1;
   position: relative;
   left: 0;
   background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  backdrop-filter: blur(10px);
+  // backdrop-filter: blur(10px);
   padding: 20px 50px;
   transition: 0.4s;
   color: white;
 }
 
-.card:hover .content {
-  left: -25px;
-  padding: 40px 50px;
-}
+// .card:hover .content {
+//   left: -25px;
+//   padding: 40px 50px;
+// }
 
 .card h2 {
   font-size: 1.9em;
