--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,136 +3,23 @@
 <app-searchbar></app-searchbar>
 
 <div *ngIf="!loading" class="container">
-    <div class="card a">
-      <span></span>
-      <div class="content">
-        <h2>Simone Sorte</h2>
-        <h4>Digital Marketing</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid harum molestiae inventore id quaerat earum error quidem voluptates velit!</p>
-        <a [routerLink]="['/teacher', 1]" >More</a>
-        <div class="avatar">
-          <img src="https://static.wixstatic.com/media/8e48bf_af10d8bd7837407382b4ef9ce4c11297~mv2.jpeg/v1/crop/x_100,y_24,w_209,h_209/fill/w_132,h_132,al_c,q_80,usm_0.66_1.00_0.01/WhatsApp%20Image%202021-05-04%20at%2018_54_18_jp.webp" alt="">
-        </div>
+  <div *ngFor="let expert of expertsList; index as i" class="card">
+    <span></span>
+    <div class="content">
+      <h2>{{ expert.firstName }} {{ expert.lastName }}</h2>
+      <h4>{{ expert.label }}</h4>
+      <p>
+        {{ expert.description | slice: 0:100 }}
+      </p>
+      <a [routerLink]="['/expert', expert.id]">More</a>
+      <div class="avatar">
+        <img src="{{ expert.profileImg }}" alt="" />
       </div>
     </div>
-  
-    <div class="card b">
-      <span></span>
-      <div class="content">
-        <h2>Marinela Marku</h2>
-        <h4>Social Media Manager</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid harum molestiae inventore id quaerat earum error quidem voluptates velit!</p>
-        <a [routerLink]="['/teacher', 2]">More</a>
-        <div class="avatar">
-          <img src="https://static.wixstatic.com/media/8e48bf_8f762f7244fb4eefb4cb1096b838fc29~mv2.jpeg/v1/fill/w_132,h_132,al_c,q_80,usm_0.66_1.00_0.01/WhatsApp%20Image%202021-05-22%20at%2009_45_13_jp.webp" alt="">
-        </div>
-      </div>
-    </div>
-  
-    <div class="card c">
-      <span></span>
-      <div class="content">
-        <h2>Alessandro Martelli</h2>
-        <h4>Marketing</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquid harum molestiae inventore id quaerat earum error quidem voluptates velit!</p>
-        <a [routerLink]="['/teacher', 3]">More</a>
-        <div class="avatar">
-          <img src="https://static.wixstatic.com/media/8e48bf_9169d5b529e64911a16fa096b27f685c~mv2.png/v1/fill/w_135,h_134,al_c,q_85,usm_0.66_1.00_0.01/82975427_2622018024551857_26541928214513.webp" alt="">
-        </div>
-      </div>
-    </div>
-  
   </div>
-<!-- <div *ngIf="!loading" class="cards-list">
-  <mat-card [routerLink]="['/teacher', 1]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/YRzQnWzbn4WIxd3ZYx/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Digital Marketing</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Simone Sorte</p>
-    </div>
-  </mat-card>
 
-  <mat-card [routerLink]="['/teacher', 2]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/xTiQyw99MYXMazEZoc/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Social Media Manager</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Marinela Marku</p>
-    </div>
-  </mat-card>
-
-  <mat-card [routerLink]="['/teacher', 3]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/mwwEcxbodLHIk/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Marketing</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Alessandro Martelli</p>
-    </div>
-  </mat-card>
-
-  <mat-card [routerLink]="['/teacher', 4]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/lXiRzPb8C5JTJcfPq/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Programming</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Stefano Di Cecco</p>
-    </div>
-  </mat-card>
+  <!-- 
+<div style="padding: 5%">
+  <mat-divider *ngIf="!loading" style="margin: 5% 0 5% 0"></mat-divider>
 </div> -->
-<div style="padding: 5%;">
-  <mat-divider *ngIf="!loading" style="margin: 5% 0 5% 0;"></mat-divider>
 </div>
-
-<!-- <div *ngIf="!loading" class="cards-list">
-  <div>
-    <h2 class="second-title">
-      Top Sellers
-    </h2>
-  </div>
-  <mat-card [routerLink]="['/teacher', 5]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/xTiN0FXnoSlDhSjgR2/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Search Engine Optimization</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Franco Verdi</p>
-    </div>
-  </mat-card>
-  <mat-card [routerLink]="['/teacher', 6]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/cgW5iwX0e37qg/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Musicians</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Loren Gray</p>
-    </div>
-  </mat-card>
-  <mat-card [routerLink]="['/teacher', 7]" class="card">
-    <div class="card_image">
-      <img src="https://media.giphy.com/media/pO4UHglOY2vII/giphy.gif" />
-    </div>
-    <div class="card_title">
-      <p>Dancer</p>
-    </div>
-    <div class="card_subtitle">
-      <p>Fred Astaire</p>
-    </div>
-  </mat-card>
-</div> -->
