--- a/src/app/components/expert/expert.component.html
+++ b/src/app/components/expert/expert.component.html
@@ -1,14 +1,43 @@
-<div class="container">
-  <div class="card a">
-    <span></span>
-    <div>
-      <div class="content">
-        <h2>{{ expert.firstName }} {{ expert.lastName }}</h2>
-        <h4>{{ expert.label }}</h4>
-        <p>
-          {{ expert.description }}
-        </p>
-      </div>
+<mat-card style="background-color: #121212" class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image">
+      <img mat-card-image src="{{ expert.profileImg }}" alt="Photo of expert" />
     </div>
-  </div>
-</div>
+    <mat-card-title
+      >{{ expert.firstName }} {{ expert.lastName }}</mat-card-title
+    >
+    <mat-card-subtitle>{{ expert.label }}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="{{ expert.profileImg }}" alt="Photo of expert" />
+  <mat-card-content>
+    <p>
+      {{ expert.description }}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <mat-grid-list cols="2" rowHeight="2:1">
+      <div class="example-button-row">
+        <mat-grid-tile>
+          <button mat-raised-button [matMenuTriggerFor]="bookMenu">BOOK A CALL</button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>STANDARD</button>
+            <button mat-menu-item>MENTORSHIP</button>
+            <button mat-menu-item>COACHING SESSION</button>
+          </mat-menu>
+        </mat-grid-tile>
+        <mat-grid-tile
+          ><button mat-raised-button>SHARE PROFILE</button></mat-grid-tile
+        >
+        <mat-grid-tile>
+          <button mat-raised-button [matMenuTriggerFor]="socialMenu">LINK</button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>WEBSITE</button>
+            <button mat-menu-item>FACEBOOK</button>
+            <button mat-menu-item>INSTAGRAM</button>
+          </mat-menu>
+        </mat-grid-tile>
+        <mat-grid-tile><button mat-raised-button>REVIEW</button></mat-grid-tile>
+      </div>
+    </mat-grid-list>
+  </mat-card-actions>
+</mat-card>
