--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,6 +1,34 @@
 <mat-spinner color="accent" class="center" *ngIf="loading"></mat-spinner>
 
-<app-searchbar></app-searchbar>
+<div style="padding: 5%" *ngIf="!loading && isMobile">
+  <form action="" class="search-bar">
+    <input
+      #box
+      (keyup)="onKey(box.value)"
+      type="search"
+      name="search"
+      required
+    />
+    <button class="search-btn" type="submit">
+      <span>Search</span>
+    </button>
+  </form>
+</div>
+
+<div style="padding: 3%" *ngIf="!loading && !isMobile">
+  <form action="" class="search-bar">
+    <input
+      #box
+      (keyup)="onKey(box.value)"
+      type="search"
+      name="search"
+      required
+    />
+    <button class="search-btn" type="submit">
+      <span>Search</span>
+    </button>
+  </form>
+</div>
 
 <div *ngIf="!loading" class="container">
   <div *ngFor="let expert of expertsList; index as i" class="card">
@@ -17,9 +45,4 @@
       </div>
     </div>
   </div>
-
-  <!-- 
-<div style="padding: 5%">
-  <mat-divider *ngIf="!loading" style="margin: 5% 0 5% 0"></mat-divider>
-</div> -->
 </div>
