--- a/src/app/components/expert/expert.component.scss
+++ b/src/app/components/expert/expert.component.scss
@@ -10,3 +10,59 @@
 .example-button-row a {
   margin-right: 8px;
 }
+
+.title {
+  font-weight: 900;
+  line-height: 41px;
+  font-size: 30px;
+  color: #ffffff;
+}
+
+.sub-title {
+  font-weight: 900;
+  line-height: 21px;
+  font-size: 15px;
+  color: #ffffff;
+}
+
+.description {
+  padding: auto;
+  margin-top: 10px;
+  font-weight: 900;
+  line-height: 21px;
+  font-size: 15px;
+  color: #ffffff;
+}
+
+section {
+  display: table;
+}
+
+.example-label {
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+}
+
+.example-button-row {
+  // display: table-cell;
+  display: inline;
+  width: 490px;
+}
+
+.example-button-row .mat-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
