--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -168,6 +168,21 @@
   background: linear-gradient(315deg, #4dff03, #00d0ff);
 }
 
+.card:nth-child(4)::before,
+.card:nth-child(4)::after {
+  background: linear-gradient(315deg, #ffbc00, #ff0058);
+}
+
+.card:nth-child(5)::before,
+.card:nth-child(5)::after {
+  background: linear-gradient(315deg, #03a9f4, #ff0058);
+}
+
+.card:nth-child(6)::before,
+.card:nth-child(6)::after {
+  background: linear-gradient(315deg, #4dff03, #00d0ff);
+}
+
 .card span {
   display: block;
   position: absolute;
