--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -60,3 +60,8 @@ form button:hover{
   transform: scale(1.1);
   box-shadow: 2px 2px 10px #909497;
 }
+
+.example-section {
+  margin: 12px;
+  padding: 12px;
+}
