--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -59,24 +59,29 @@
         </div>
       </div>
 
-      <section class="example-section">
-        <mat-checkbox formControlName="expert" class="example-margin">Sei un esperto ?</mat-checkbox>
-      </section>
-
-      <button [disabled]="loading" class="btn btn-primary">
-        <span
-          *ngIf="loading"
-          class="spinner-border spinner-border-sm mr-1"
-        ></span>
-        Register
-      </button>
-      <button routerLink="/login" [disabled]="loading" class="btn btn-primary">
-        <span
-          *ngIf="loading"
-          class="spinner-border spinner-border-sm mr-1"
-        ></span>
-        Cancel
-      </button>
+      <div style="padding: 3%;">
+        <section class="example-section">
+          <mat-checkbox formControlName="expert" class="example-margin">Sei un esperto ?</mat-checkbox>
+        </section>  
+      </div>
+      
+      <div style="padding: 5%;">
+        <button [disabled]="loading" class="btn btn-primary">
+          <span
+            *ngIf="loading"
+            class="spinner-border spinner-border-sm mr-1"
+          ></span>
+          Register
+        </button>
+        <button routerLink="/login" [disabled]="loading" class="btn btn-primary">
+          <span
+            *ngIf="loading"
+            class="spinner-border spinner-border-sm mr-1"
+          ></span>
+          Cancel
+        </button>
+      </div>
+      
     </form>
   </div>
 </div>
